# winops-admin-toolkit

./: .gitignore  LICENSE  PRIVACY.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
config/: default.json
docs/: config-example.md  implementation-notes.md  manual-test-checklist.md  roadmap.md  sample-output.md  security-checklist.md  source-inspiration.json  testing-guide.md  troubleshooting.md  usage-examples.md
docs/ai-plan/: 2026-06-07.md  2026-06-09.md
docs/daily-progress/: 2026-06-07.md  2026-06-09.md  2026-06-11.md  2026-06-13.md
samples/: disks.json  events.json  services.json
src/: app.py  cli.py  disk_usage.py  event_log.py  report.py  service_health.py
tests/: test_app.py  test_cli.py  test_disk_usage.py  test_event_log.py  test_report.py  test_service_health.py
