[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "winops-admin-toolkit"
version = "0.1.0"
description = "Windows admin support toolkit — service health, event logs, disk usage"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[project.scripts]
winops = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]

[tool.ruff]
line-length = 120
